# zero2prod

./: .editorconfig  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
migrations/: 20211006043224_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
